# ToDo-Bot

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/tg_auth/: apps.py  models.py  serializers.py  urls.py  views.py
backend/tg_auth/migrations/: 0002_alter_tgprofile_tg_id.py
backend/todo/: admin.py  models.py  urls.py  views.py
backend/todo/migrations/: 0001_initial.py  0002_alter_category_options_remove_category_urgency.py  0003_category_user_alter_task_creator_and_more.py  0004_alter_category_unique_together_category_urgency_and_more.py  0005_remove_category_title.py  0006_alter_category_urgency.py  0007_alter_category_urgency.py  0008_alter_category_urgency.py  0009_alter_category_urgency.py
backend/todo/serializers/: __init__.py  category_serializers.py  task_serializers.py
backend/todo_manager/: config.py  settings.py  urls.py
bot/: Dockerfile  config.py  main.py
bot/api/: __init__.py  client.py  urls.py
bot/crud/: __init__.py  create.py  delete.py  read.py  update.py  utils.py
bot/dialogs/: __init__.py
bot/dialogs/registration/: __init__.py  dialog.py  handlers.py  router.py  states.py  windows.py
bot/dialogs/todo/: __init__.py  getters.py  router.py
bot/dialogs/todo/create/: __init__.py  dialog.py  handlers.py  router.py  states.py  windows.py
bot/dialogs/todo/delete/: __init__.py  dialog.py  handlers.py  router.py  states.py  windows.py
bot/dialogs/todo/read/: __init__.py  dialog.py  handlers.py  router.py  states.py  windows.py
bot/dialogs/todo/update/: __init__.py  dialog.py  handlers.py  router.py  states.py  windows.py
bot/register/: __init__.py  register.py
