[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "aiogram-dialog>=2.4.0",
    "celery>=5.6.0",
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "DJ",
    "UP",
    "TCH",
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["PROJECT AND APPS NAMES"]
combine-as-imports = true
